# Ayasdi-data-challenge-solution

./: CMakeLists.txt  Makefile  README.md
inc/: all.hpp  arrays.hpp  structs.hpp
src/: CMakeLists.txt  driver.cpp
